# graph-code-rag

./: .gitignore  README.md  docker-compose.yml  pyproject.toml  test.py
src/code_graph_rag/: main.py
src/code_graph_rag/agent/: graph_agent.py  intent.py  llm.py  models.py  plan_maker.py  plan_runner.py  planner.py  resolver.py  synthesis.py  validator.py
src/code_graph_rag/agent/adapters/: core.py  registry.py
src/code_graph_rag/agent/synthesis/: synthesis.py  synthesis_context.py  synthesis_prompts.py  synthesis_schemas.py
src/code_graph_rag/agent/utils/: code_slice.py  ranking.py  utils.py
src/code_graph_rag/graph/: bootstrap.py  exporter.py  graph_builder.py
src/code_graph_rag/models/: base.py  edges.py  nodes.py
src/code_graph_rag/parser/: ast_parser.py
src/code_graph_rag/pipeline/: __init__.py  build_knowledge_graph.py  db_bootstrap.cypher
src/code_graph_rag/utils/: file_utils.py  logging_setup.py
tests/: conftest.py
tests/agent/: conftest.py  test_graph_agent_synthesis_integration.py  test_intent_router.py  test_plan_maker.py  test_plan_runner_enrich_integration.py  test_plan_runner_integration.py  test_planner.py  test_resolver.py  test_synthesis_graph_integration.py  test_synthesis_integration.py  test_validate_and_retry_integration.py
tests/calls_edge_test/: calls_edge_test.py  functions_methods_test.py
tests/inherits_edge_test/: base.py  inherits_edge_test.py
tests/parser/: test_imports.py  test_parse_imports.py  test_phase2_1_parse_filesystem.py  test_phase2_6_parse_imports.py  test_phase2_7_parse_external_manifest.py  test_phase2_7_parse_external_usage.py
tests/sample_repo/: README.md  requirements.txt  trainer.py
ui/: frontend.py
(+3 files in other folders)
