[project]
name = "code-graph-rag"
version = "0.1.0"
description = ""
authors = [
    {name = "chautuankien",email = "ctkiena2@gmail.com"}
]
readme = "README.md"
requires-python = "^3.12"
dependencies = [
    "networkx (>=3.5,<4.0)",
    "matplotlib (>=3.10.5,<4.0.0)",
    "astpretty (>=3.0.0,<4.0.0)",
    "langgraph (>=0.6.3,<0.7.0)",
    "langchain (>=0.3.27,<0.4.0)",
    "python-dotenv (>=1.1.1,<2.0.0)",
    "pydantic (>=2.11.7,<3.0.0)",
    "langchain-openai (>=0.3.28,<0.4.0)",
    "pymgclient (>=1.4.0,<2.0.0)",
    "streamlit (>=1.48.0,<2.0.0)",
    "pytest (>=8.4.1,<9.0.0)",
    "loguru (>=0.7.3,<0.8.0)"
]

[tool.poetry]
packages = [{include = "code_graph_rag", from = "src"}]

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
log_cli = true
log_cli_level = "DEBUG"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
